More style fixes to overlaps page

--- a/variantgrid/static_files/default_static/css/global_bs.scss
+++ b/variantgrid/static_files/default_static/css/global_bs.scss
@@ -588,9 +588,9 @@ div.background-image {
     border-color: #dddddd !important;
 }
 .loading-message {
-    margin-top: 60px; // have more of a gap at the top for the spinner to go
-    margin-bottom: 40px;
-    color: #888888;
+    margin-top: 40px; // have more of a gap at the top for the spinner to go
+    margin-bottom: 20px;
+    border-top: 60px solid transparent;
     width: 100%;
     text-align: center;
     font-weight: 500;
@@ -629,7 +629,7 @@ div.background-image {
 	}
 }
 .card-footer .hover-link {
-    color: #448 !important;
+    color: #66a !important;
     font-weight: 500;
 }
 .hover-delete {
